--- a/5Securesoftwaredevelopment.html
+++ b/5Securesoftwaredevelopment.html
@@ -106,7 +106,7 @@
 											<header class="major">
 												<h3>Artefacts</h3>
 											</header>
-											<p>These are the projects carried out to meet those learning outcomes, which are described in the link below.</p>
+											<p>These are the projects carried out to meet those learning outcomes, which are described above.</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
