--- a/4Infromationriskmanagement.html
+++ b/4Infromationriskmanagement.html
@@ -60,11 +60,11 @@
 							</span>
 
 							<header class="major">
-								<h1>Network and Information Security Management</h1>
+								<h1>Information Risk Managment</h1>
 							</header>
 				
 							<div class="content">
-								<p>A grounding in security concepts and terminology, illustrated by hands on practice in one of the most important aspects of information security today – network technology</p>
+								<p>Work in progress</p>
 							</div>
 						</div>
 					</section>
@@ -88,13 +88,10 @@
 									</header>
 									<p>
 										<ul>
-										  <li>Identify and analyse security risks and vulnerabilities in IT network systems and determine appropriate methodologies, tools and techniques to manage and/or solve them.</li>
-											<p>
-											<li>Design and critically appraise computer programs and systems to produce solutions that help manage and audit risk and security issues.</li>
-											<p>
-											<li>Gather and synthesise information from multiple sources (including internet security alerts & warning sites) to aid in the systematic analysis of security breaches and issues.</li>
-											<p>
-											<li>Articulate the legal, social, ethical and professional issues faced by information security professionals.</li>
+										  <li><p>
+											<li><p>
+											<li><p>
+											<li>
 									</ul>
 </p>
 								</div>
@@ -103,7 +100,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="3.1Artefacts.html" class="image">
+									<a href="4.1Artefacts.html" class="image">
 										<img src="images/picprojects.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -113,13 +110,13 @@
 											</header>
 											<p>These are the projects carried out to meet those learning outcomes, which are described above.</p>
 											<ul class="actions">
-												<li><a href="3.1Artefacts.html" class="button">Learn more</a></li>
+												<li><a href="4.1Artefacts.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="3.2Reflections.html" class="image">
+									<a href="4.2Reflections.html" class="image">
 										<img src="images/picreflections.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -129,13 +126,13 @@
 											</header>
 											<p>What exactly have I learned and how?</p>
 											<ul class="actions">
-												<li><a href="3.2Reflections.html" class="button">Learn more</a></li>
+												<li><a href="4.2Reflections.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="3.3Notes.html" class="image">
+									<a href="4.3Notes.html" class="image">
 										<img src="images/picnotes.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
@@ -145,7 +142,7 @@
 											</header>
 											<p>Notes from various meetings, as well as feedback from team members and tutors.</p>
 											<ul class="actions">
-												<li><a href="3.3Notes.html" class="button">Learn more</a></li>
+												<li><a href="4.3Notes.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
@@ -160,7 +157,7 @@
 									</header>
 									<p>What skills have I gained or enhanced as a result of this module and how can I use it? What else do I need to learn?</p>
 									<ul class="actions">
-										<li><a href="3.4Skillmatrix.html" class="button next">Get Started</a></li>
+										<li><a href="4.4Skillmatrix.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
 							</section>
