--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 										<img src="images/picsecuresystem.jpg " alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="6Securesystemarchitecture.html.html" class="link">Secure System Architecture</a></h3>
+										<h3><a href="6Securesystemarchitecture.html" class="link">Secure System Architecture</a></h3>
 										<p>Work in Progress</p>
 									</header>
 								</article>
