--- a/5Securesoftwaredevelopment.html
+++ b/5Securesoftwaredevelopment.html
@@ -64,7 +64,7 @@
 							</header>
 				
 							<div class="content">
-								<p>Work in progress</p>
+								<p>An in depth look at the security risks which are associated with programming languages, from the perspectives of design and architecture approaches, programming paradigms, testing, the impact and implications of operating systems and libraries on software development, the security risks associated with distributed systems and APIs, and future trends in secure software and systems design.</p>
 							</div>
 						</div>
 					</section>
@@ -88,10 +88,14 @@
 									</header>
 									<p>
 										<ul>
-										  <li><p>
-											<li><p>
-											<li><p>
-											<li>
+											<li>Identify and manage security risks as part of a software development project.</li>
+											<p> </p>
+											<li>Critically analyse development problems and determine appropriate methodologies, tools and techniques to solve them.</li>
+											<p> </p>
+											<li>Design and develop computer programs and to produce a solution that meets the design brief and critically evaluate solutions that are produced.</li>
+											<p> </p>
+											<li>Systematically develop and implement the skills required to be effective member of a development team in a virtual professional environment, adopting real-life perspectives on team roles and organisation.</li>
+											<p> </p>
 									</ul>
 </p>
 								</div>
