--- a/4Infromationriskmanagement.html
+++ b/4Infromationriskmanagement.html
@@ -64,7 +64,7 @@
 							</header>
 				
 							<div class="content">
-								<p>Work in progress</p>
+								<p>A review of traditional and contemporary Software Development Life Cycle (SDLC) models, focusing on the areas most affected by risk management considerations.</p>
 							</div>
 						</div>
 					</section>
@@ -88,10 +88,13 @@
 									</header>
 									<p>
 										<ul>
-										  <li><p>
-											<li><p>
-											<li><p>
-											<li>
+										  <li>Identify and critically analyse IT system risks and problems, and identify appropriate methodologies, tools and techniques to solve or mitigate them.</li>
+											<p> </p>
+											<li>Evaluate and adapt programs and systems to produce a solution that meets the design brief.</li>
+											<p> </p>
+											<li>Critically analyse and evaluate solutions produced.</li>
+											<p> </p>
+											<li>Systematically develop and implement the skills required to be an effective member of a development team in a virtual professional environment, adopting real-life perspectives on roles and team organisation.</li>
 									</ul>
 </p>
 								</div>
