--- a/4.3Notes.html
+++ b/4.3Notes.html
@@ -70,7 +70,7 @@
 										<header class="major">
 											<h2>Meeting Notes and Preparations</h2>
 										</header>
-											<b>Seminar 1 - Introductory session and group allocation for Team Project</b>
+											<b>Seminar 1 - Introductory session and group allocation for Team Project:</b>
 											<a href="Notes/">Notes</a> <nobr> and </nobr>
 											<a href="Artefacts/">Preparation</a>
 											<p> </p>
