--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="4Infromationriskmanagement.html" class="link">Information Risk Management</a></h3>
-										<p>Work in Progress</p>
+										<p>A review of traditional and contemporary Software Development Life Cycle (SDLC) models, focusing on the areas most affected by risk management considerations.</p>
 									</header>
 								</article>
 								<article>
@@ -124,7 +124,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="5Securesoftwaredevelopment.html" class="link">Secure Software Development</a></h3>
-										<p>Work in Progress</p>
+										<p>An in depth look at the security risks which are associated with programming languages, from the perspectives of design and architecture approaches, programming paradigms, testing, the impact and implications of operating systems and libraries on software development, the security risks associated with distributed systems and APIs, and future trends in secure software and systems design.</p>
 									</header>
 								</article>
 								<article>
