--- a/5.1Artefacts.html
+++ b/5.1Artefacts.html
@@ -76,6 +76,10 @@
 											<summary>The preparations of the group work and seminar tasks:</summary>
 											
 											<p> </p>
+										<b>
+											<a href="Artefacts/Secure_Software_Development/Team_Contract.pdf">Seminar 1: Team Contract</a>
+											<p> </p>
+											<p> </p>
 										
 										</details>
 										<p> </p>
