--- a/5.3Notes.html
+++ b/5.3Notes.html
@@ -72,8 +72,8 @@
 											<h2>Meeting Notes and Preparations</h2>
 										</header>
 											<b>Seminar 1 - Introductory session and group allocation for Team Project</b>
-											<a href="Notes/">Notes</a> <nobr> and </nobr>
-											<a href="Artefacts/">Preparation</a>
+											<a href="Notes/Secure_Software_Development/Notes_Session_1.pdf">Notes</a> <nobr> and </nobr>
+											<a href="Artefacts/Secure_Software_Development/Team_Contract.pdf ">Preparation</a>
 											<p> </p>
 											
 											<b>Seminar 2 - Scrum Security Review:</b>
