--- a/4.3Notes.html
+++ b/4.3Notes.html
@@ -71,7 +71,7 @@
 											<h2>Meeting Notes and Preparations</h2>
 										</header>
 											<b>Seminar 1 - Introductory session and group allocation for Team Project:</b>
-											<a href="Notes/">Notes</a> <nobr> and </nobr>
+											<a href="Notes/Information_Risk_Management/Notes_Session_1.pdf">Notes</a> <nobr> and </nobr>
 											<a href="Artefacts/">Preparation</a>
 											<p> </p>
 											
