--- a/5.2Reflections.html
+++ b/5.2Reflections.html
@@ -74,10 +74,8 @@
 										</header>
 										<details>
 											<summary><b>Unit 1</b></summary>
-                      <p></p>
-												<b>References:</b>
-												<ul>
-													</ul>
+                      <p>At the beginning of the module, techniques were learned that can be used in the development and creation of secure software to optimize the process. This includes the waterfall and agile approaches to software development, such as the SCRUM approach. The standards for the secure development of software were also emphasized and an introduction to UML models was given again. Working in a team is subject to various challenges that must be met in order to achieve optimal efficiency. Especially in view of the fact that in this module software is to be created within six weeks, smooth and productive teamwork is of high priority in order to be able to use the time efficiently and in a goal-oriented manner. The techniques discussed in this unit help here, although it must be differentiated which technique is most suitable for the module. Due to the limited time in which the software is to be developed, only an agile technique such as the SCRUM approach offers the appropriate flexibility and timing to create a product that is as finished as possible in a short time. This approach also offers the possibility of creating a finished product in different instances, so that the final product can be variable, depending on the development speed and requirements. Beyond the theory, however, this approach still has to be validated in a practical test in the team over the next few weeks in order to be able to develop a considered opinion on this variable approach. The reflected consideration of the standards in relation to the secure development of software offered an overview of the previous standards and regulations of the last modules. Although no new insights were gained, a change of perspective was made in a certain way, since the relevant standards and regulations are now not only analyzed and examined in the context of case studies, but also have to be considered when creating your own software. The same applies to the UML models. Since the models have only been used up to now to recreate existing structures, the models should now offer a possibility to support structured work in the team. Thus, the reflective handling and an understanding of conventions are of high priority in order to be able to exploit the potential of these presentation options.</p>
+											
 										</details>
 										<p> </p>
                     
