--- a/4.3Notes.html
+++ b/4.3Notes.html
@@ -71,13 +71,11 @@
 											<h2>Meeting Notes and Preparations</h2>
 										</header>
 											<b>Seminar 1 - Introductory session and group allocation for Team Project:</b>
-											<a href="Notes/Information_Risk_Management/Notes_Session_1.pdf">Notes</a> <nobr> and </nobr>
-											<a href="Artefacts/">Preparation</a>
+											<a href="Notes/Information_Risk_Management/Notes_Seminar1.pdf">Notes</a>
 											<p> </p>
 											
 											<b>Seminar 2 - User Participation in the Risk Management Process:</b>
-											<a href="Notes/">Notes</a> <nobr> and </nobr>
-											<a href="Artefacts/">Preparation</a>
+											<a href="Notes/Information_Risk_Management/Notes_Seminar2.pdf">Notes</a>
 											<p> </p>
 											
 											<b>Seminar 3 - The Effect of Risk on the SDLC:</b>
