--- a/5.3Notes.html
+++ b/5.3Notes.html
@@ -78,7 +78,7 @@
 											
 											<b>Seminar 2 - Scrum Security Review:</b>
 											<a href="Notes/Secure_Software_Development/Notes_Seminar2.pdf">Notes</a> <nobr> and </nobr>
-											<a href="Artefacts/">Preparation</a>
+											<a href="Notes/Secure_Software_Development/Scrum Security Review - Seminar 2.pdf ">Preparation</a>
 											<p> </p>
 											
 											<b>Seminar 3 - Cryptography:</b>
