--- a/5.1Artefacts.html
+++ b/5.1Artefacts.html
@@ -101,6 +101,15 @@
 										<p> </p>
 										</div>
 										</section>
+										
+										<section id="three">
+									<div class="inner">
+										<header class="major">
+											<h2>Blog Post</h2>
+										</header>
+										<details>
+											<summary>Blog post about the people as a risk factor in Cyber Security.</summary>
+											<a href="Artefacts/Secure_Software_Development/Blogpost.pdf">Blog post</a>
 
 				<!-- Contact -->
 		<!--			<section id="contact">
