--- a/5.1Artefacts.html
+++ b/5.1Artefacts.html
@@ -129,6 +129,20 @@
 										<p> </p>
 										</div>
 										</section>
+									
+									<section id="five">
+									<div class="inner">
+										<header class="major">
+											<h2>Codio Activity</h2>
+										</header>
+										<details>
+											<summary>Exercises in Codio on buffer overflow and testing tools like pylint and flask8.</summary>
+											<b>		<a href="Artefacts/Secure_Software_Development/Codio exercises.pdf">Codio exercises</a>  </b>
+											</details>
+										<p> </p>
+										<p> </p>
+										</div>
+										</section>
 
 				<!-- Contact -->
 		<!--			<section id="contact">
