--- a/5.1Artefacts.html
+++ b/5.1Artefacts.html
@@ -78,6 +78,7 @@
 											<p> </p>
 										<b>
 											<a href="Artefacts/Secure_Software_Development/Team_Contract.pdf">Seminar 1: Team Contract</a>
+											<a href="Artefacts/Secure_Software_Development/ISS DES Design Proposal - March 2022.pptx">ISS Design Proposal</a>
 											<p> </p>
 											<p> </p>
 										
