--- a/5.1Artefacts.html
+++ b/5.1Artefacts.html
@@ -144,6 +144,21 @@
 										<p> </p>
 										</div>
 										</section>
+									
+									<section id="six">
+									<div class="inner">
+										<header class="major">
+											<h2>Encryption and Decryption exercise</h2>
+										</header>
+										<details>
+											<summary>Exercises to create an Encryption and Decryption solution.</summary>
+											<b>		<a href="Artefacts/Secure_Software_Development/Encryption_and_Decryption.pdf">Explanation of approach</a>  </b>
+											<b>		<a href="Artefacts/Secure_Software_Development/Encryption_and_Decryption_exercise.py">python code</a>  </b>
+											</details>
+										<p> </p>
+										<p> </p>
+										</div>
+										</section>
 
 				<!-- Contact -->
 		<!--			<section id="contact">
