--- a/5.3Notes.html
+++ b/5.3Notes.html
@@ -82,8 +82,8 @@
 											<p> </p>
 											
 											<b>Seminar 3 - Cryptography:</b>
-											<a href="Notes/">Notes</a><nobr> and </nobr>
-											<a href="Artefacts/">Preparation</a>
+											<a href="Notes/Notes_Seminar3.pdf">Notes</a><nobr> and </nobr>
+											<a href="Artefacts/Encryption_and_Decryption_exercise.py">Preparation</a>
 											<p> </p>
 											
 											<b>Seminar 4 - Programming Languages:</b>
