--- a/5.1Artefacts.html
+++ b/5.1Artefacts.html
@@ -159,6 +159,37 @@
 										<p> </p>
 										</div>
 										</section>
+									
+										<section id="seven">
+									<div class="inner">
+										<header class="major">
+											<h2>Assessment 1 - Design Document </h2>
+										</header>
+										<details>
+											<summary>The goal of the Design Document was to develop an application that provides a secure repository for an organisation with domain-specific requirements. A domain refers to a group of users with similar application and hardware requirements. Assumptions were made and a planed strukture of the application developed.</summary>
+											<b>		<a href="Artefacts/Secure_Software_Development/Design Document - Final.pdf">Design Document</a>  </b>
+											<b>		<a href="Artefacts/Secure_Software_Development/Peer review - Design Document.pdf">Peer review</a>  </b>
+											</details>
+										<p> </p>
+										<p> </p>
+										</div>
+										</section>
+									
+													<section id="eight">
+									<div class="inner">
+										<header class="major">
+											<h2>Assessment 2 - Coding Output</h2>
+										</header>
+										<details>
+											<summary>The plans made in the Design Document were her carried out and an application was coded.</summary>
+											<b>		<a href="Artefacts/Secure_Software_Development/">Coding Outpunt</a>  </b>
+											<b>		<a href="Artefacts/Secure_Software_Development/">Peer review</a>  </b>
+											</details>
+										<p> </p>
+										<p> </p>
+										</div>
+										</section>
+
 
 				<!-- Contact -->
 		<!--			<section id="contact">
