--- a/5.1Artefacts.html
+++ b/5.1Artefacts.html
@@ -138,7 +138,7 @@
 											<h2>Codio Activity</h2>
 										</header>
 										<details>
-											<summary>Exercises in Codio on buffer overflow and testing tools like pylint and flask8.</summary>
+											<summary>Exercises in Codio on buffer overflow and testing tools like pylint and flake8.</summary>
 											<b>		<a href="Artefacts/Secure_Software_Development/Codio exercises.pdf">Codio exercises</a>  </b>
 											</details>
 										<p> </p>
