--- a/5.1Artefacts.html
+++ b/5.1Artefacts.html
@@ -110,8 +110,10 @@
 											<h2>Blog Post</h2>
 										</header>
 										<details>
-											<summary>Blog post about the people as a risk factor in Cyber Security.</summary>
-											<b>		<a href="Artefacts/Secure_Software_Development/Blogpost.pdf">Blog post</a>  </b>
+											<summary>Blog post about the people as a risk factor in Cyber Security and Fog Computing as a future trend.</summary>
+											<b>		<a href="Artefacts/Secure_Software_Development/Blogpost.pdf">People as a risk factor</a>  </b>
+											<p> </p>
+											<b>		<a href="Artefacts/Secure_Software_Development/Blogpost - Fog computing.pdf">Fog Computing</a>  </b>
 											</details>
 										<p> </p>
 										<p> </p>
