--- a/5.3Notes.html
+++ b/5.3Notes.html
@@ -87,8 +87,8 @@
 											<p> </p>
 											
 											<b>Seminar 4 - Programming Languages:</b>
-											<a href="Notes/">Notes</a> <nobr> and </nobr>
-											<a href="Artefacts/">Preparation</a>
+											<a href="Notes/Secure_Software_Development/Notes_Seminar4.pdf">Notes</a> <nobr> and </nobr>
+											<a href="Notes/Secure_Software_Development/Programming Languages - Seminar 4.pdf">Preparation</a>
 											<p> </p>
 										
 										<b>Notes from the team meetings<b>
