--- a/5.4Skillmatrix.html
+++ b/5.4Skillmatrix.html
@@ -74,7 +74,7 @@
 										</header>
 										<p>
 											<b>
-											<a href="Skillmatrix/">Personal Skill Matrix</a>
+											<a href="Skillmatrix/Skillmatrix_Secure Software Development">Personal Skill Matrix</a>
 										</b>
 									
                     <p> </p>
