--- a/4.2Reflections.html
+++ b/4.2Reflections.html
@@ -124,9 +124,10 @@
                     
                     	<details>
 											<summary><b>Unit 6</b></summary>
-                      <p></p>
+                      <p>This unit has created an outlook on the future of Information Risk Management. Furthermore, hard problems defined by the NSA in relation to IRM were examined. The requirements for IRM are subject to an appropriate pressure to adapt, particularly due to the rapid change in cyber security, which is due to the enormous development of new opportunities offered by the further development of the Internet, but also the associated dangers. Technical advances, for example in relation to machine learning and risk management, can help to develop better BCP and DR plans. The seminar in this unit was very informative, as a bridge was built from the BCP, DR, RTO and RPO discussed in the previous unit and their interdependence in IaaS and IaC. With this in mind, considerations could be made as to which technical advances could contribute to a more stable BCP, but also which additional or new threats could arise as a result. The hard problems related to security science listed by the NSA provide a general overview of the issues to be considered when developing and using digital architecture (Adam, 2015). It should be noted that these five hard problems, Scalablity and Composability, Policy-Governed Secure Collaboraton, Security Metrics Driven Evaluation, Design, Development and Deployment, Resilient Architectures and Underatanding and Accounting for Houman Behavior, are not actually new insights, but rather because of the new requirements must be viewed from modified perspectives. It should be emphasized that the enormous development, especially with regard to the Internet, cloud computing and IoT, requires a new focus in order to adequately evaluate the five hard problems mentioned and to apply them in the new context.</p>
 												<b>References:</b>
 												<ul>
+													<li>Adam, T. (2015) The Science of Scruity 5 Hard Problems. Science of Security and Privacy. Available from: https://cps-vo.org/group/sos/hardproblems [Accessed 18 April 2022].</li>
 													</ul>
 										</details>
 										<p> </p>
