--- a/4.1Artefacts.html
+++ b/4.1Artefacts.html
@@ -137,9 +137,9 @@
 										</header>
 										<details>
 											<summary>The aim of this report is to apply the Information Risk Management techniques studied in the course to the problem as described and evaluate the results.</summary>
-											<b>	<a href="Artefacts/Information_Risk_Management/">Risk Assessment Report</a> </b>
+											<b>	<a href="Artefacts/Information_Risk_Management/IRM - Risk Assessment Report.pdf">Risk Assessment Report</a> </b>
 											<p> </p>
-											<b>		<a href="Artefacts/Information_Risk_Management/">Peer review</a> </b>
+											<b>		<a href="Artefacts/Information_Risk_Management/Peer review - Risk Assessment Report.pdf">Peer review</a> </b>
 										
 									</details>
 										<p> </p>
