--- a/5.3Notes.html
+++ b/5.3Notes.html
@@ -92,7 +92,7 @@
 											<p> </p>
 										
 										<b>Notes from the team meetings<b>
-											<a href="Notes/Secure_Software_Development/">Team meeting notes</a>
+											<a href="Notes/Secure_Software_Development/Team meeting notes.pdf">Team meeting notes</a>
 									
 									</div>
 							</section>
