--- a/5.3Notes.html
+++ b/5.3Notes.html
@@ -91,7 +91,7 @@
 											<a href="Notes/Secure_Software_Development/Programming Languages - Seminar 4.pdf">Preparation</a>
 											<p> </p>
 										
-										<b>Notes from the team meetings<b>
+										<b>Notes from the team meetings</b>
 											<a href="Notes/Secure_Software_Development/Team meeting notes.pdf">Team meeting notes</a>
 									
 									</div>
