--- a/5.3Notes.html
+++ b/5.3Notes.html
@@ -103,6 +103,11 @@
 											<h2>Feedback</h2>
 										</header>
 									<b>	<a href="Notes/Secure_Software_Development/Feedback_Collaborative_Discussion1.pdf">Feedback on the Collaborative Discussion 1</a> </b>
+										<p> </p>
+										<b>	<a href="Notes/Secure_Software_Development/Feedback_Development_Team_Project.pdf">Feedback on the Coding Project</a> </b>
+										<p> </p>
+										<b>	<a href="Notes/Secure_Software_Development/Feedback_Individual_Reflective_Document.pdf">Feedback on the Individual Reflective Document</a> </b>
+										
 										
 										<p> </p>
 
