--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="6Securesystemarchitecture.html" class="link">Secure System Architecture</a></h3>
-										<p>Work in Progress</p>
+										<p> A review of the evolution of traditional operating systems architecture models, common security models, and the impact of distributed systems technologies on modern systems.</p>
 									</header>
 								</article>
 								<article>
