--- a/6Securesystemarchitecture.html
+++ b/6Securesystemarchitecture.html
@@ -64,7 +64,7 @@
 							</header>
 				
 							<div class="content">
-								<p>Work in progress</p>
+								<p> A review of the evolution of traditional operating systems architecture models, common security models, and the impact of distributed systems technologies on modern systems.</p>
 							</div>
 						</div>
 					</section>
@@ -88,10 +88,10 @@
 									</header>
 									<p>
 										<ul>
-										  <li><p>
-											<li><p>
-											<li><p>
-											<li>
+										  <li>Identify and critically analyse operating system risks and issues, and identify appropriate methodologies, tools and techniques to solve them.</li>
+											<li>Evaluate and adapt platforms and systems, using processes such as code refactoring, to produce secure distributed system solutions.</li>
+											<li>Critically analyse and evaluate solutions produced.</li>
+											<li>Systematically develop and implement the skills required to be effective member of a development team in a virtual professional environment, adopting real-life perspectives on team roles and organisation.</li>
 									</ul>
 </p>
 								</div>
