--- a/6.3Notes.html
+++ b/6.3Notes.html
@@ -73,13 +73,11 @@
 											<h2>Meeting Notes and Preparations</h2>
 										</header>
 											<b>Seminar 1 - Introductory session and group allocation for Team Project</b>
-											<a href="Notes/">Notes</a> <nobr> and </nobr>
-											<a href="Artefacts/">Preparation</a>
+											<a href="Notes/Secure_Software_Architecture/1_Seminar.pdf">Notes</a> 
 											<p> </p>
 											
 											<b>Seminar 2 - Scrum Security Review:</b>
-											<a href="Notes/">Notes</a> <nobr> and </nobr>
-											<a href="Notes/">Preparation</a>
+											<a href="Notes/Secure_Software_Architecture/2_Seminar.pdf">Notes</a> 
 											<p> </p>
 											
 											<b>Seminar 3 - Cryptography:</b>
