--- a/6.1Artefacts.html
+++ b/6.1Artefacts.html
@@ -146,7 +146,7 @@
 										<details>
 											<summary>The Document focused on a quantitative analysis of vulnerabilities, threats and mitigation strategies in smart home devices and controller hub.</summary>
 											<p> </p>
-											<b>	<a href="Artefacts/Secure_System_Architecture/Design Document - SSA - Group 2.pdf">Initial Post</a> </b>
+											<b>	<a href="Artefacts/Secure_System_Architecture/Design Document - SSA - Group 2.pdf">Design Document</a> </b>
 									</details>
 										<p> </p>
 										<p> </p>
@@ -162,7 +162,7 @@
 										<details>
 											<summary>In the Coding Project a smart home was simulated and selcted threats were adressed in order to mitigate them.</summary>
 											<p> </p>
-											<b>	<a href="Artefacts/Secure_System_Architecture/">Initial Post</a> </b>
+											<b>	<a href="Artefacts/Secure_System_Architecture/">Coding Project</a> </b>
 									</details>
 										<p> </p>
 										<p> </p>
