--- a/6.2Reflections.html
+++ b/6.2Reflections.html
@@ -138,7 +138,7 @@ Another central aspect of this unit was the teamwork that took place as part of 
 </p>
                         <b>References:</b>
 												<ul>
-													<li> Al-Sarawi S., Anbar M., Alieyan K. & Alzubaidi M. (2017)Internet of Things (IoT) communication protocols: Review.  International Conference on Information Technology. 685-690. Available from: https://0-ieeexplore-ieee-org.serlib0.essex.ac.uk/document/8079928 [Accessed 03 June 2022].</li>
+													<li> Al-Sarawi, S., Anbar, M., Alieyan, K. & Alzubaidi, M. (2017)Internet of Things (IoT) communication protocols: Review.  International Conference on Information Technology. 685-690. Available from: https://0-ieeexplore-ieee-org.serlib0.essex.ac.uk/document/8079928 [Accessed 03 June 2022].</li>
 													<li>AlDossary, N., AlQahtani, S., & AlUbaidan, H. (2022) A Survey on Resource Management and Security Issues in IoT Operating Systems. International Conference of Women in Data Science at Prince Sultan University. 26-30. Available from: https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9764840 [Accessed 04 June 2022].</li>
 													<li>Subih, M. A., Malik, B. H., Mazhar, I., Yousaf, A., Sabir, M. U., Wakeel, T. & Nawaz, H. (2019) Comparison of agile method and scrum method with software quality affecting factors. International Journal of Advanced Computer Science and Applications. 10(5): 531-535. Available from: https://pdfs.semanticscholar.org/3ed8/4e552137101ac7d3c2c02bb9860b6ddebb6b.pdf [Accessed 04 June 2022].</li>
 											</ul>
