--- a/6Securesystemarchitecture.html
+++ b/6Securesystemarchitecture.html
@@ -60,7 +60,7 @@
 							</span>
 
 							<header class="major">
-								<h1>Secure System Architecture</h1>
+								<h1>Secure Systems Architecture</h1>
 							</header>
 				
 							<div class="content">
