--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 										<img src="images/picsecuresystem.jpg " alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="6Securesystemarchitecture.html" class="link">Secure System Architecture</a></h3>
+										<h3><a href="6Securesystemarchitecture.html" class="link">Secure Systems Architecture</a></h3>
 										<p> A review of the evolution of traditional operating systems architecture models, common security models, and the impact of distributed systems technologies on modern systems.</p>
 									</header>
 								</article>
