--- a/6.1Artefacts.html
+++ b/6.1Artefacts.html
@@ -111,7 +111,7 @@
 											<h2>Collaborative Discussion 2</h2>
 										</header>
 										<details>
-											<summary>The aim of the Collaborative Discussion was to analyse the converting process from Monoliths into Microservices</summary>
+											<summary>The aim of the Collaborative Discussion was to analyse the converting process from Monoliths into Microservices.</summary>
 											<p> </p>
 											<b>	<a href="Artefacts/Secure_System_Architecture/Initial Post_Collaborative Discussion 2.pdf">Initial Post</a> </b>
 									</details>
@@ -162,6 +162,7 @@
 											<summary>The Document focused on a quantitative analysis of vulnerabilities, threats and mitigation strategies in smart home devices and controller hub.</summary>
 											<p> </p>
 											<b>	<a href="Artefacts/Secure_System_Architecture/Design Document - SSA - Group 2.pdf">Design Document</a> </b>
+											<b>	<a href="Artefacts/Secure_System_Architecture/Peer Review - Design Document.pdf ">Peer Review</a> </b>
 									</details>
 										<p> </p>
 										<p> </p>
@@ -177,7 +178,8 @@
 										<details>
 											<summary>In the Coding Project a smart home was simulated and selcted threats were adressed in order to mitigate them.</summary>
 											<p> </p>
-											<b>	<a href="Artefacts/Secure_System_Architecture/">Coding Project</a> </b>
+											<b>	<a href="Artefacts/Secure_System_Architecture/SSA_SmartDeviceSimulation_Group 2.zip">Coding Project</a> </b>
+											<b>	<a href="Artefacts/Secure_System_Architecture/Peer Review - Coding Project.pdf">Peer Review</a> </b>
 									</details>
 										<p> </p>
 										<p> </p>
