--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="7Thehumanfactor.html" class="link">The Human Factor</a></h3>
-										<p>Work in Progress</p>
+										<p>An analyse of theories, concepts and principles from behavioural psychology and computer science to explore how effective usable security solutions can be designed.</p>
 										
 										
 										</header>
