--- a/7Thehumanfactor.html
+++ b/7Thehumanfactor.html
@@ -64,7 +64,7 @@
 							</header>
 				
 							<div class="content">
-								<p>Work in progress</p>
+								<p>An analyse of theories, concepts and principles from behavioural psychology and computer science to explore how effective usable security solutions can be designed.</p>
 							</div>
 						</div>
 					</section>
@@ -88,10 +88,10 @@
 									</header>
 									<p>
 										<ul>
-										  <li><p>
-											<li><p>
-											<li><p>
-											<li>
+											<li><p>Review the concepts and principles of human behaviour within the context of cyber security.</p></li>
+											<li><p>Develop an in-depth understanding of the elements of risk in a socio-technical system.</p></li>
+											<li><p>Critically examine effective strategies to promote and manage the human factor in cyber security.</p></li>
+											<li><p>Critically evaluate the social and ethical considerations in developing and applying usable security.</p></li>
 									</ul>
 </p>
 								</div>
