--- a/6.3Notes.html
+++ b/6.3Notes.html
@@ -104,7 +104,8 @@
 											<h2>Feedback</h2>
 											<p> </p>
 										<b>	<a href="Notes/Secure_System_Architecture/Feedback-Design Document.pdf">Design Document</a> </b>
-											<b>	<a href="Notes/Secure_System_Architecture/">Coding Project</a> </b>
+											<b>	<a href="Notes/Secure_System_Architecture/Feedback-Coding Project.pdf">Coding Project</a> </b>
+											<b>	<a href="Notes/Secure_System_Architecture/Feedback-Individual Reflective Piece.pdf">Individual Reflective Piece</a> </b>
 									
 										
 										<p> </p>
