--- a/7.1Artefacts.html
+++ b/7.1Artefacts.html
@@ -71,14 +71,14 @@
 									<section id="one">
 									<div class="inner">
 										<header class="major">
-											<h2>Work in progress</h2>
+											<h2>Blog Entry: Lay Summary</h2>
 										</header>
 										<details>
-											<summary>work in progress</summary>
+											<summary>A blog entry about user attitudes and behaviours towards the use of smartphones and their security implications based on data collected in China. This artefact was supposed to train the individual capabilities of writing a lay summary </summary>
 											
 											<p> </p>
 										<b>
-											<a href="">Artefact 1</a>
+											<a href="Artefacts/The_Human_Factor/Blog Entry_Lay Summary.pdf">Lay Summary</a>
 											
 											<p> </p>
 											<p> </p>
