--- a/7.1Artefacts.html
+++ b/7.1Artefacts.html
@@ -120,7 +120,7 @@
 											<summary>An Essay about the human factors and socio-technical problems arises from the implementation of an appointment and scheduling management information system (ASMIS) in the Queens Medical Centre community clinic. </summary>
 											<p> </p>
 										<b>
-											<a href="Artefacts/The_Human_Factor/Indivdual Essay - Michael Geiger">Individual Essay</a>
+											<a href="Artefacts/The_Human_Factor/Individual Essay - Michael Geiger.pdf">Individual Essay</a>
 											
 											<p> </p>
 											<p> </p>
