--- a/7.4Skillmatrix.html
+++ b/7.4Skillmatrix.html
@@ -75,10 +75,10 @@
 										</header>
 										<p>
 											<b>
-											<a href="Skillmatrix/">Personal Skill Matrix</a>
+											<a href="Skillmatrix/Skillmatrix_The Human Factor.pdf">Personal Skill Matrix</a>
 										</b>
 									
-                    <p>Work in progress.</p>
+                    <p>In the module The Human Factor, the most important component in the interaction of and with software, the human, was examined. Human skills, cognitive capacities and psychological aspects were examined in the context of cyber security and how measures can be taken to reduce threats from the human factor. Concepts and principles of human behaviour have helped to understand what interests users of applications can pursue and how these mental models should be observed so that a planned and targeted use of security functions can take place. The module showed a wide range of aspects, threats and countermeasures in the context of humans and examined them on a psychological level. It was not only possible to emphasize the importance of the human factor in the context of cyber security, but also to create an understanding of how these findings can be applied to contribute to security.</p>
                     
                     <p>  <p>
 									<p>  <p>
