--- a/8Principlesofdigitalforensicsandcyberlaw.html
+++ b/8Principlesofdigitalforensicsandcyberlaw.html
@@ -64,7 +64,7 @@
 							</header>
 				
 							<div class="content">
-								<p>Work in progress</p>
+								<p>An introduction to the key aspects of law, the legal system, principles of evidence collection and forensic analysis. </p>
 							</div>
 						</div>
 					</section>
