--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="8Principlesofdigitalforensicsandcyberlaw.html" class="link">Principles of Digital Forensics and Cyber Law</a></h3>
-										<p>Work in Progress</p>
+										<p>An introduction to the key aspects of law, the legal system, principles of evidence collection and forensic analysis.</p>
 										
 											</header>
 								</article>
