--- a/8Principlesofdigitalforensicsandcyberlaw.html
+++ b/8Principlesofdigitalforensicsandcyberlaw.html
@@ -88,10 +88,10 @@
 									</header>
 									<p>
 										<ul>
-										  <li><p>
-											<li><p>
-											<li><p>
-											<li>
+										  <li>Critically appraise the global legal and regulatory environment as it applies to cyberspace, and compliance requirements, including the GDPR and the obligations it imposes.</li>
+											<li>Critically appraise ethical considerations and the rights that people may or may not have in cyberspace, and understand the debates in this area.</li>
+											<li>Explore the challenges and opportunities of regulating and policing cyberspace.</li>
+											<li>Critically evaluate different types of evidence and collection and presentation techniques, underpinned by the principles of continuity of evidence and reliability of analytical tools and techniques.</li>
 									</ul>
 </p>
 								</div>
