--- a/8.1Artefacts.html
+++ b/8.1Artefacts.html
@@ -76,9 +76,10 @@
 										</header>
 										<details>
                       <summary>A reflection on whether the approach of eliminating the conceptual distinction between legal systems can aid prevention and apprehension of cyber harm.
-											<a href="Artefacts/Principles_of_Digital_Forensics_and_Cyber_Law/Unit 1 e-portfolio activity_what is law.pdf">E-Portfolio Activity 1: What is Law?</a>
+												<p> </p>
+												<b><a href="Artefacts/Principles_of_Digital_Forensics_and_Cyber_Law/Unit 1 e-portfolio activity_what is law.pdf">E-Portfolio Activity 1: What is Law?</a></b>
 											</summary>
-                       
+										</details>
 											
 											<p> </p>
 											<p> </p>
