--- a/8.3Notes.html
+++ b/8.3Notes.html
@@ -74,12 +74,12 @@
 											<h2>Meeting Notes and Preparations</h2>
 										</header>
 											<b>Seminar 1 - Introductory session</b>
-											<a href="Notes/">Notes</a> 
+											<a href="Notes/Principles_of_Digital_Forensics_and_Cyber_Law/1_Seminar.pdf">Notes</a> 
 											<p> </p>
 											
 											<b>Seminar 2 - Cybercrime Case Analysis</b>
- 										<a href="Notes/">Notes</a><nobr> and </nobr>
-                    <a href="Notes/">Preparation</a>
+ 										<a href="Notes/Principles_of_Digital_Forensics_and_Cyber_Law/2_Seminar.pdf">Notes</a><nobr> and </nobr>
+                    <a href="Notes/Principles_of_Digital_Forensics_and_Cyber_Law/Seminar 2 preparation.pdf">Preparation</a>
 											<p> </p>
 											
 										<b>Seminar 3 - Evidence collection</b>
