--- a/8.1Artefacts.html
+++ b/8.1Artefacts.html
@@ -96,7 +96,11 @@
 												<p> </p>
 												<b><a href="Artefacts/Principles_of_Digital_Forensics_and_Cyber_Law/Collaborative_Discussion_1/Collabortive Discussion 1_Initial Post_Michael Geiger.pdf">Initial Post</a></b>
 											<p> </p>
-											<b><a href="Artefacts/Principles_of_Digital_Forensics_and_Cyber_Law/Collaborative_Discussion_1/Collabortive Discussion_Peer Response - Ying_Michael Geiger.pdf">Peer Response</a></b>
+											<b><a href="Artefacts/Principles_of_Digital_Forensics_and_Cyber_Law/Collaborative_Discussion_1/Collaborative Discussion 1_Peer Response - Ying Chan_Michael Geiger.pdf">Peer Response</a></b>
+											<p> </p>
+											<b><a href="Artefacts/Principles_of_Digital_Forensics_and_Cyber_Law/Collaborative_Discussion_1/Collaborative Discussion 1_Received Response 1.pdf">Received Response</a></b>
+											<p> </p>
+											<b><a href="Artefacts/Principles_of_Digital_Forensics_and_Cyber_Law/Collaborative_Discussion_1/Collaborative Discussion 1_Summary Post_Michael Geiger.pdf">Summary Post</a></b>
 										</details>
 											
 											<p> </p>
