--- a/8.4Skillmatrix.html
+++ b/8.4Skillmatrix.html
@@ -76,10 +76,10 @@
 										</header>
 										<p>
 											<b>
-											<a href="Skillmatrix/">Personal Skill Matrix</a>
+											<a href="Skillmatrix/Skillmatrix_Principles of Digital Forensics and Cyber Law.pdf">Personal Skill Matrix</a>
 										</b>
 									
-                    <p>Work in progress</p>
+                    <p>In the Principles of Digital Forensics and Cyber Law module, key aspects of law and the legal system, designed to be non-jurisdiction specific, were examined. In addition, the principles of evidence collection and forensic analysis, different types of evidence and methods of evidence presentation, in a cyber security context were considered at national and international level and the need for detailed evidence collection within the legal framework was highlighted. A central consideration of the module was the need of awareness of common legal principles which apply to cyberspace. Ethics, rights and regulatory challenges were discussed and the applicability to a range of situations and jurisdictions was checked. Legal principles which apply to forensics and expert evidence were examined in depth and processes in evidence gathering and analysis were related to a number of situations and jurisdictions.</p>
                       
                     <p>  <p>
 									<p>  <p>
